--- a/colibre/auto_plotter/baryon_fractions.yml
+++ b/colibre/auto_plotter/baryon_fractions.yml
@@ -1,5 +1,5 @@
 baryon_fraction_500:
-  type: "2dhistogram"
+  type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "upper left"
@@ -34,7 +34,7 @@ baryon_fraction_500:
     - filename: HaloMassBaryonFractions/Zhang2011.hdf5
 
 gas_fraction_500_no_bias:
-  type: "2dhistogram"
+  type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "upper left"
@@ -73,7 +73,7 @@ gas_fraction_500_no_bias:
     - filename: HaloMassGasFractions/Lovisari2015.hdf5
 
 gas_fraction_500_with_bias:
-  type: "2dhistogram"
+  type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "upper left"
@@ -108,7 +108,7 @@ gas_fraction_500_with_bias:
     - filename: HaloMassGasFractions/HSE-FLAMINGO.hdf5
 
 star_fraction_500:
-  type: "2dhistogram"
+  type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "upper left"
@@ -145,7 +145,7 @@ star_fraction_500:
 
 
 gas_mass_500:
-  type: "2dhistogram"
+  type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "upper left"
