--- a/colibre/auto_plotter/corrected_luminosity_functions.yml
+++ b/colibre/auto_plotter/corrected_luminosity_functions.yml
@@ -1,25 +1,3 @@
-corrected_luminosity_r_function_50:
-  type: "luminosityfunction"
-  legend_loc: "lower left"
-  number_of_bins: 25
-  x:
-    quantity: "derived_quantities.corrected_magnitudes_r_band_50_kpc"
-    log: false
-    units: "dimensionless"
-    start: -25
-    end: -13.5
-  y:
-    units: 1/Mpc**3
-    start: 1e-6
-    end: 0.316 # (1e-0.5)
-  metadata:
-    title: r-band Luminosity Function (50 kpc aperture)
-    caption: 50 kpc aperture dust-free rest-frame luminosity function in the SDSS r-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
-    section: Luminosity Function (IMF-corrected)
-  observational_data:
-    - filename: GalaxyLuminosityFunction/Driver2012_r.hdf5
-    - filename: GalaxyLuminosityFunction/Loveday2012_r.hdf5
-
 corrected_luminosity_u_function_50:
   type: "luminosityfunction"
   legend_loc: "lower left"
@@ -37,33 +15,11 @@ corrected_luminosity_u_function_50:
   metadata:
     title: u-band Luminosity Function (50 kpc aperture)
     caption: 50 kpc aperture dust-corrected rest-frame luminosity function in the SDSS u-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
-    section: Luminosity Function (IMF-corrected)
+    section: vIMF Luminosity Function
   observational_data:
     - filename: GalaxyLuminosityFunction/Driver2012_u.hdf5
     - filename: GalaxyLuminosityFunction/Loveday2012_u.hdf5
 
-corrected_luminosity_z_function_50:
-  type: "luminosityfunction"
-  legend_loc: "lower left"
-  number_of_bins: 25
-  x:
-    quantity: "derived_quantities.corrected_magnitudes_z_band_50_kpc"
-    log: false
-    units: "dimensionless"
-    start: -25
-    end: -13.5
-  y:
-    units: 1/Mpc**3
-    start: 1e-6
-    end: 0.316 # (1e-0.5)
-  metadata:
-    title: z-band Luminosity Function (50 kpc aperture)
-    caption: 50 kpc aperture dust-corrected rest-frame luminosity function in the SDSS z-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
-    section: Luminosity Function (IMF-corrected)
-  observational_data:
-    - filename: GalaxyLuminosityFunction/Driver2012_z.hdf5
-    - filename: GalaxyLuminosityFunction/Loveday2012_z.hdf5
-  
 corrected_luminosity_k_function_50:
   type: "luminosityfunction"
   legend_loc: "lower left"
@@ -81,9 +37,31 @@ corrected_luminosity_k_function_50:
   metadata:
     title: k-band Luminosity Function (50 kpc aperture)
     caption: 50 kpc aperture dust-free rest-frame luminosity function in the VISTA k-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
-    section: Luminosity Function (IMF-corrected)
+    section: vIMF Luminosity Function
   observational_data:
     - filename: GalaxyLuminosityFunction/Driver2012_K.hdf5
+
+corrected_luminosity_r_function_50:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.corrected_magnitudes_r_band_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -13.5
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: r-band Luminosity Function (50 kpc aperture)
+    caption: 50 kpc aperture dust-free rest-frame luminosity function in the SDSS r-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: vIMF Luminosity Function
+  observational_data:
+    - filename: GalaxyLuminosityFunction/Driver2012_r.hdf5
+    - filename: GalaxyLuminosityFunction/Loveday2012_r.hdf5
 
 corrected_luminosity_FUV_function_50:
   type: "luminosityfunction"
@@ -102,16 +80,43 @@ corrected_luminosity_FUV_function_50:
   metadata:
     title: FUV-band Luminosity Function (50 kpc aperture)
     caption: 50 kpc aperture dust-free luminosity function in the GALEX FUV-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
-    section: Luminosity Function (IMF-corrected)
+    section: vIMF Luminosity Function
   observational_data:
-    - filename: GalaxyLuminosityFunction/Driver2012_J.hdf5
+    - filename: GalaxyLuminosityFunction/Bouwens2021A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Casey2024A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Castellano2023A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Harikane2022A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Harikane2023A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Robertson2024A_FUV.hdf5
 
+corrected_luminosity_z_function_50:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.corrected_magnitudes_z_band_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -13.5
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: z-band Luminosity Function (50 kpc aperture)
+    caption: 50 kpc aperture dust-free rest-frame luminosity function in the SDSS z-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex.
+    section: vIMF Luminosity Function
+  observational_data:
+    - filename: GalaxyLuminosityFunction/Driver2012_z.hdf5
+    - filename: GalaxyLuminosityFunction/Loveday2012_z.hdf5
+  
 # corrected_luminosity_w_dust_r_function_50:
 #   type: "luminosityfunction"
 #   legend_loc: "lower left"
 #   number_of_bins: 25
 #   x:
-#     quantity: "derived_quantities.corrected_magnitudes_with_dust_r_band_50_kpc"
+#     quantity: "derived_quantities.corrected_magnitudes_w_dust_r_band_50_kpc"
 #     log: false
 #     units: "dimensionless"
 #     start: -25
@@ -121,9 +126,9 @@ corrected_luminosity_FUV_function_50:
 #     start: 1e-6
 #     end: 0.316 # (1e-0.5)
 #   metadata:
-#     title: r-band Dust Corrected Luminosity Function (50 kpc aperture)
+#     title: r-band Luminosity Function (50 kpc aperture, Dust Attenuated)
 #     caption: 50 kpc aperture dust-attenuated rest-frame luminosity function in the SDSS r-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
-#     section: Luminosity Function (IMF-corrected)
+#     section: vIMF Luminosity Function
 #   observational_data:
 #     - filename: GalaxyLuminosityFunction/Driver2012_r.hdf5
 #     - filename: GalaxyLuminosityFunction/Loveday2012_r.hdf5
@@ -133,7 +138,7 @@ corrected_luminosity_FUV_function_50:
 #   legend_loc: "lower left"
 #   number_of_bins: 25
 #   x:
-#     quantity: "derived_quantities.corrected_magnitudes_with_dust_FUV_band_50_kpc"
+#     quantity: "derived_quantities.corrected_magnitudes_w_dust_FUV_band_50_kpc"
 #     log: false
 #     units: "dimensionless"
 #     start: -25
@@ -143,8 +148,13 @@ corrected_luminosity_FUV_function_50:
 #     start: 1e-6
 #     end: 0.316 # (1e-0.5)
 #   metadata:
-#     title: FUV-band Dust Corrected Luminosity Function (50 kpc aperture)
+#     title: FUV-band Luminosity Function (50 kpc aperture, Dust Attenuated)
 #     caption: 50 kpc aperture dust-attenuated luminosity function in the GALEX FUV-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
-#     section: Luminosity Function (IMF-corrected)
+#     section: vIMF Luminosity Function
 #   observational_data:
-#     - filename: GalaxyLuminosityFunction/Driver2012_J.hdf5
+#     - filename: GalaxyLuminosityFunction/Bouwens2021A_FUV.hdf5
+#     - filename: GalaxyLuminosityFunction/Casey2024A_FUV.hdf5
+#     - filename: GalaxyLuminosityFunction/Castellano2023A_FUV.hdf5
+#     - filename: GalaxyLuminosityFunction/Harikane2022A_FUV.hdf5
+#     - filename: GalaxyLuminosityFunction/Harikane2023A_FUV.hdf5
+#     - filename: GalaxyLuminosityFunction/Robertson2024A_FUV.hdf5
