--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -602,3 +602,14 @@ scripts:
     output_file: passive_active_stellar_metallicity_difference.png
     section: Stellar Metallicity
     title: Stellar Metallicity Difference Passive vs. Active Galaxies
+  - filename: scripts/effective_snii_energy_fraction_distribution.py
+    caption: Distribution of effective SNII energy fractions, split by redshift. Effective SNII feedback accounts for the increased number of SNII feedback events due to a variable top heavy IMF. The y-axis shows the number of stars per bin divided by the bin width and by the total number of stars. The dashed vertical lines show the median SNII energy fraction in three different redshift intervals. The dotted vertical line shows the average SNII energy fraction computed over all star particles in the simulation.
+    title: Effective SNII Energy Fraction Distribution
+    section: vIMF Diagnostic Plots
+    output_file: effective_snii_energy_fraction_distribution.png
+  - filename: scripts/vimf_slope_birth_density.py
+    caption: The relation between the IMF high mass ($> 0.5 M_{\u2609}$) slope and and stellar birth density. The dashed vertical lines indicate the pivot birth density used in the simulation.
+    title: IMF slope vs. Stellar Birth Density
+    section: vIMF Diagnostic Plots
+    output_file: vimf_top_heavy_slope.png
+
