Added stefanon 2017 to z-band data

--- a/colibre/auto_plotter/corrected_luminosity_functions.yml
+++ b/colibre/auto_plotter/corrected_luminosity_functions.yml
@@ -110,6 +110,7 @@ corrected_luminosity_z_function_50:
   observational_data:
     - filename: GalaxyLuminosityFunction/Driver2012_z.hdf5
     - filename: GalaxyLuminosityFunction/Loveday2012_z.hdf5
+    - filename: GalaxyLuminosityFunction/Stefanon2017_z.hdf5
   
 # corrected_luminosity_w_dust_r_function_50:
 #   type: "luminosityfunction"
