--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Installs required Python modules
       - name: Install Python modules
-        run: python3 -m pip install black==22.1.0
+        run: python3 -m pip install click==8.0.4 black==19.3b0
         
       # Runs the formatting script
       - name: Formatting
